--- a/Fake News.ipynb
+++ b/Fake News.ipynb
@@ -379,6 +379,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Definindo a função para tratamento do texto"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
@@ -427,6 +434,13 @@
    ],
    "source": [
     "df_true[\"text\"].head(1000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Separando o conjunto para criar o modelo"
    ]
   },
   {
@@ -662,6 +676,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Criando o modelo com tf-idf"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
@@ -747,8 +768,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_tfidf = tdidf_transformer.transform(text_bow)\n",
-    "#fake_detect_model = MultinomialNB().fit(text_test, news[\"subject\"])"
+    "text_tfidf = tdidf_transformer.transform(text_bow)"
    ]
   },
   {
@@ -776,6 +796,13 @@
    "outputs": [],
    "source": [
     "from sklearn.pipeline import Pipeline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pipeline para fitar o modelo "
    ]
   },
   {
@@ -844,6 +871,13 @@
    "source": [
     "from sklearn.metrics import classification_report\n",
     "from sklearn.metrics import confusion_matrix"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Métricas do modelo"
    ]
   },
   {
