--- a/Fake News.ipynb
+++ b/Fake News.ipynb
@@ -19,7 +19,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p>Fake news sempre foram um problemas, porém em 2016 com a eleição presidencial dos EUA acabaram ganhando uma notoriedade maior e\n",
+    "<p>Fake news sempre foram um problema, porém em 2016 com a eleição presidencial dos EUA acabaram ganhando uma notoriedade maior e\n",
     "devido ao crescimento de redes sociais e maior facilidade de passar informação, o problema continua crescendo.</p>"
    ]
   },
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,10 +396,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\Skiiney\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
+     ]
+    }
+   ],
    "source": [
+    "nlp.download(\"stopwords\")\n",
     "from nltk.corpus import stopwords\n",
     "def clean_text(text):\n",
     "    # Retirar pontuações\n",
@@ -419,33 +430,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\r"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "0      WASHINGTON (Reuters) - The head of a conservat...\n",
-       "1      WASHINGTON (Reuters) - Transgender people will...\n",
-       "2      WASHINGTON (Reuters) - The special counsel inv...\n",
-       "3      WASHINGTON (Reuters) - Trump campaign adviser ...\n",
-       "4      SEATTLE/WASHINGTON (Reuters) - President Donal...\n",
+       "0      [WASHINGTON, Reuters, The, head, conservative,...\n",
+       "1      [WASHINGTON, Reuters, Transgender, people, all...\n",
+       "2      [WASHINGTON, Reuters, The, special, counsel, i...\n",
+       "3      [WASHINGTON, Reuters, Trump, campaign, adviser...\n",
+       "4      [SEATTLEWASHINGTON, Reuters, President, Donald...\n",
        "                             ...                        \n",
-       "995    WASHINGTON (Reuters) - A U.S. congressional co...\n",
-       "996    WASHINGTON (Reuters) - U.S. President Donald T...\n",
-       "997    WASHINGTON (Reuters) - U.S. Secretary of State...\n",
-       "998    WASHINGTON (Reuters) - Former CIA director Jam...\n",
-       "999    SEOUL (Reuters) - U.S. Defense Secretary Jim M...\n",
-       "Name: text, Length: 1000, dtype: object"
+       "195    [WASHINGTON, Reuters, President, Donald, Trump...\n",
+       "196    [WASHINGTON, Reuters, US, House, Republicans, ...\n",
+       "197    [WASHINGTON, Reuters, President, Donald, Trump...\n",
+       "198    [WASHINGTON, Reuters, The, Republican, chairma...\n",
+       "199    [WASHINGTON, Reuters, A, US, District, Court, ...\n",
+       "Name: text, Length: 200, dtype: object"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_true[\"text\"].head(1000)"
+    "df_true[\"text\"].head(200).apply(clean_text)"
    ]
   },
   {
@@ -797,9 +815,9 @@
    "outputs": [],
    "source": [
     "pipeline = Pipeline([\n",
-    "    (\"bow\", CountVectorizer(analyzer=clean_text)),\n",
-    "    (\"tfidf\", TfidfTransformer()),\n",
-    "    (\"classifier\", MultinomialNB())\n",
+    "    (\"bow\", CountVectorizer(analyzer=clean_text)), # vetorização e contagem das palavras, o analyzer aplica o filtro para limpar as palavras\n",
+    "    (\"tfidf\", TfidfTransformer()), # metódo do TF-IDF\n",
+    "    (\"classifier\", MultinomialNB()) # Modelo de classificação, nesse caso foi usado naive bayes\n",
     "])"
    ]
   },
